crates/utils/re_arrow_combinators/tests/snapshots/transform__flatten_single_element.snap
---
source: crates/utils/re_arrow_combinators/tests/transform.rs
expression: "format!(\"{}\", DisplayRB(result.clone()))"
---
┌─────────────────────────────────────────┐
│ col                                     │
│ ---                                     │
│ type: nullable List[nullable Struct[2]] │
╞═════════════════════════════════════════╡
│ [{x: 0.0, y: 0.0}, {x: 42.0, y: 42.0}]  │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ []                                      │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ null                                    │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ [{x: 7.0, y: null}, {x: 7.0, y: 7.0}]   │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ [{x: 17.0, y: 17.0}]                    │
└─────────────────────────────────────────┘
